--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,25 +1,40 @@
 <%- include("../partials/header") %>
 
+
 <div class= "container">
+    <% if(currentUser && currentUser.isAdmin) {%>
+        <h1>You're an admin</h1>
+    <% } %>
     <header class= "jumbotron">
         <div class= "container">
             <h1>Welcome To YelpCamp!</h1>
-            <p>View our hand-picked blah blah</p>
+            <p>View our hand-picked campgrounds from all over the world!!!</p>
             <p>
                 <a class= "btn btn-primary btn-lg" href="/campgrounds/new">Add new Campground</a>
             </p>
+            <p>
+                <form action="/campgrounds" method="GET" class="form-inline">
+                    <div class="form-group">
+                        <input type="text" name="search" placeholder="Campground search..." class="form-control">
+                        <input type="submit" value="Search" class="btn btn-default">
+                    </div>
+                </form>
+            </p>
         </div>
     </header>
-
-    <div class= "row">
-        <div class= "col-lg-12">
-            <h3>Our Most Popular CampGrounds</h3>
-        </div>
-    </div>
-
-
     
     <div class= "row text-center" style="display:flex; flex-wrap: wrap;">
+        <div class='col-md-12'>
+            <% if(noMatch !== null) { %>
+                <h3><%= noMatch %></h3>
+            <% } else {%>
+                <div class= "row">
+                    <div class= "col-lg-12">
+                        <h3>Our Most Popular CampGrounds</h3>
+                    </div>
+                </div>
+            <% } %>
+        </div>
         <% campgrounds.forEach(function(campground) { %>
             <div class="col-md-3 col-sm-6">
                 <div class= "thumbnail">
@@ -31,8 +46,6 @@
                         <a href="/campgrounds/<%= campground._id%>" class ="btn btn-primary">More Info</a>
                     </p>
                 </div>
-                
-                
             </div>
         <% }); %>
     </div>
