--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -21,7 +21,7 @@
                     <p>
                         <em>Submitted By <%= campground.author.username %></em>
                     </p>
-                    <% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
+                    <% if (currentUser && (campground.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-xs btn-danger">Delete</button>
@@ -42,12 +42,14 @@
                             <p>
                                 <%= comment.text %>
                             </p>
-                            <% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
-                                <a class="btn btn-xs btn-warning" 
-                                    href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-                                <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
-                                    <input type="submit" class="btn btn-xs btn-danger" value="Delete">
-                                </form>
+                            <% if (currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
+                                <div class="pull-right">
+                                    <a class="btn btn-xs btn-warning" 
+                                        href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                                    <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                                        <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                                    </form>
+                                </div>
                             <% } %>
                         </div>
                     </div>
