--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,11 +7,20 @@
     </head>
     <body>
     <nav class= "navbar navbar-default">
-        <div class= "container-fluid">
+        <div class= "container">
             <div class= "navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
                 <a class="navbar-brand" href="/">YelpCamp</a>
             </div>
-            <div class="collapse navbar-collapse">
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="<%= currentUser ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser) { %>
                         <li><a href="/login">Login</a></li>
