--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,13 +5,32 @@
     <div style="width: 30%; margin: 25px auto;">
         <form action="/register" method="post">
             <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="username">
+                <label>Username</label>
+                <input class="form-control" type="text" name="username">
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="password">
+                <label>Password</label>
+                <input class="form-control" type="password" name="password">
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" name="adminCode" placeholder="Admin code">
+                <label>First Name</label>
+                <input class="form-control" type="text" name="firstName">
+            </div>
+            <div class="form-group">
+                <label>Last Name</label>
+                <input class="form-control" type="text" name="lastName">
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input class="form-control" type="email" name="email">
+            </div>
+            <div class="form-group">
+                <label>Avatar Image URL</label>
+                <input class="form-control" type="text" name="avatar">
+            </div>
+            <div class="form-group">
+                <label>Admin Code</label>
+                <input class="form-control" type="text" name="adminCode">
             </div>
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
