--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,7 +9,7 @@
                 <li class="list-group-item">Info 2</li>
                 <li class="list-group-item">Info 3</li>
             </div>
-            <!-- MAP -->
+            <div id="map"></div>
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
@@ -58,5 +58,34 @@
         </div>
     </div>
 </div>
+
+<script>
+    function initMap() {
+      let lat = <%= campground.lat %>;
+      let lng = <%= campground.lng %>;
+      let center = {lat: lat, lng: lng };
+      let map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 8,
+          center: center,
+          scrollwheel: false
+      });
+      let contentString = `
+        <strong><%= campground.name %><br />
+        <%= campground.location %></strong>
+        <p><%= campground.description %></p>
+      `
+      let infowindow = new google.maps.InfoWindow({
+        content: contentString
+      });
+      let marker = new google.maps.Marker({
+          position: center,
+          map: map
+      });
+      marker.addListener('click', function() {
+        infowindow.open(map, marker);
+      });
+    }
+  </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwEOAvtYqqfWWyKLe2fg6pl9N-Ox_iWXY&callback=initMap"></script>  
 
 <%- include("../partials/footer") %>
