--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,91 +1,93 @@
 <%- include("../partials/header") %>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <p class="lead">YelpCamp</p>
-            <div class="list-group">
-                <li class="list-group-item active">Info 1</li>
-                <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
-            </div>
-            <div id="map"></div>
-        </div>
-        <div class="col-md-9">
-            <div class="thumbnail">
-                <img class="img=responsive" src="<%= campground.image %>">
-                <div class="caption">
-                    <h4 class="pull-right">$<%= campground.price %>/night</h4>
-                    <h4><a><%= campground.name%></a></h4>
-                    <p><%= campground.description %></p>
-                    <p>
-                        <em>Submitted By <a href="/users/<%= campground.author.id %>"><%= campground.author.username %></a></em>
-                    </p>
-                    <% if (currentUser && (campground.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
-                        <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                        <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-xs btn-danger">Delete</button>
-                        </form>
-                    <% } %>
-                </div>
-            </div>
-            <div class="well">
-                <div class="text-right">
-                    <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
-                </div>
-                <hr>
-                <% campground.comments.forEach( (comment) => { %>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <strong><%= comment.author.username %></strong>
-                            <span class="pull-right">10 days ago</span>
-                            <p>
-                                <%= comment.text %>
-                            </p>
-                            <% if (currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
-                                <div class="pull-right">
-                                    <a class="btn btn-xs btn-warning" 
-                                        href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-                                    <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
-                                        <input type="submit" class="btn btn-xs btn-danger" value="Delete">
-                                    </form>
-                                </div>
-                            <% } %>
-                        </div>
-                    </div>
-                <% }) %>
-            </div>
-        </div>
-    </div>
+<div class="row">
+	<div class="col-md-3">
+		<p class="lead">Location</p>
+		<div id="map"></div>
+	</div>
+	<div class="col-md-9">
+		<div class= "card mb-3">
+			<img class="card-img-top" src="<%= campground.image %>" alt="<%= campground.name %>">
+			<div class= "card-body">
+				<p class="float-right">$<%= campground.price %>/night</p>
+				<h5 class="card-title"><%= campground.name %></h5>
+				<p>
+					<em>Submitted By <a href="/users/<%= campground.author.id %>"><%= campground.author.username %></a></em>
+				</p>
+				<hr>
+				<p class="card-text"><%= campground.description %></p>
+				<% if (currentUser && (campground.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
+					<a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+					<form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+						<button class="btn btn-xs btn-danger">Delete</button>
+					</form>
+				<% } %>                
+			</div>
+		</div>
+		<div class="card">
+			<div class="card-body">
+				<div class="text-right">
+					<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
+				</div>
+				<hr>
+				<div class="row">
+					<% campground.comments.forEach( (comment) => { %>
+						<div class="col-md-12 mb-2">
+							<div class="card">
+								<div class="card-body">
+									<div class="float-left">
+										<p class="card-title"><%= comment.author.username %></p>
+										<p class="card-text"><%= comment.text %></p>
+									</div>
+									<div class="float-right">
+										<p>10 days ago</p>
+										<% if (currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
+											<div class="float-right">
+												<a class="btn btn-sm btn-warning" 
+													href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+												<form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+													<input type="submit" class="btn btn-sm btn-danger" value="Delete">
+												</form>
+											</div>
+										<% } %>
+									</div>
+								</div>
+							</div>
+						</div>
+					<% }) %>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script>
-    function initMap() {
-      let lat = <%= campground.lat %>;
-      let lng = <%= campground.lng %>;
-      let center = {lat: lat, lng: lng };
-      let map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 8,
-          center: center,
-          scrollwheel: false
-      });
-      let contentString = `
-        <strong><%= campground.name %><br />
-        <%= campground.location %></strong>
-        <p><%= campground.description %></p>
-      `
-      let infowindow = new google.maps.InfoWindow({
-        content: contentString
-      });
-      let marker = new google.maps.Marker({
-          position: center,
-          map: map
-      });
-      marker.addListener('click', function() {
-        infowindow.open(map, marker);
-      });
-    }
-  </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwEOAvtYqqfWWyKLe2fg6pl9N-Ox_iWXY&callback=initMap"></script>  
+	function initMap() {
+		let lat = <%= campground.lat %>;
+		let lng = <%= campground.lng %>;
+		let center = {lat: lat, lng: lng };
+		let map = new google.maps.Map(document.getElementById('map'), {
+			zoom: 8,
+			center: center,
+			scrollwheel: false
+		});
+		let contentString = `
+			<strong><%= campground.name %><br />
+			<%= campground.location %></strong>
+			<p><%= campground.description %></p>
+		`
+		let infowindow = new google.maps.InfoWindow({
+			content: contentString
+		});
+		let marker = new google.maps.Marker({
+			position: center,
+			map: map
+		});
+		marker.addListener('click', function() {
+			infowindow.open(map, marker);
+		});
+	}
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwEOAvtYqqfWWyKLe2fg6pl9N-Ox_iWXY&callback=initMap"></script>  
 
 <%- include("../partials/footer") %>
