--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,42 +1,34 @@
 <%- include("./partials/header") %>
 
 <div class="row">
-    <h1 style="text-align: center">Sign Up</h1>
-    <div style="width: 30%; margin: 25px auto;">
-        <form action="/register" method="post">
-            <div class="form-group">
-                <label>Username</label>
-                <input class="form-control" type="text" name="username">
-            </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input class="form-control" type="password" name="password">
-            </div>
-            <div class="form-group">
-                <label>First Name</label>
-                <input class="form-control" type="text" name="firstName">
-            </div>
-            <div class="form-group">
-                <label>Last Name</label>
-                <input class="form-control" type="text" name="lastName">
-            </div>
-            <div class="form-group">
-                <label>Email</label>
-                <input class="form-control" type="email" name="email">
-            </div>
-            <div class="form-group">
-                <label>Avatar Image URL</label>
-                <input class="form-control" type="text" name="avatar">
-            </div>
-            <div class="form-group">
-                <label>Admin Code</label>
-                <input class="form-control" type="text" name="adminCode">
-            </div>
-            <div class="form-group">
-                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
-            </div>
+    <div class="col-md-12 ">
+        <form class="form-signin" action="/register" method="POST">
+            <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+            <label for="inputUsername" class="sr-only">Username</label>
+            <input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
+            
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+            
+            <label for="inputFirstName" class="sr-only">First Name</label>
+            <input type="text" id="inputFirstName" class="form-control" name="firstName" placeholder="First Name" required>
+            
+            <label for="inputLastName" class="sr-only">Last Name</label>
+            <input type="text" id="inputLastName" class="form-control" name="lastName" placeholder="Last Name" required>
+
+            <label for="inputEmail" class="sr-only">Email</label>
+            <input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email" required>
+            
+            <label for="inputAvatar" class="sr-only">Avatar Image URL</label>
+            <input type="text" id="inputAvatar" class="form-control" name="avatar" placeholder="Avatar URL">
+            
+            <label for="inputAdminCode" class="sr-only">Admin Code</label>
+            <input type="text" id="inputAdminCode" class="form-control" name="adminCode" placeholder="Admin Code">
+            <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
         </form>
-        <a href="/campgrounds">Go Back</a>
+        <div class="form-signin">
+            <a href="/campgrounds">Go Back</a>
+        </div>
     </div>
 </div>
 
