--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,28 +1,28 @@
 <%- include("../partials/header") %>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <h1><%= user.firstName + " " + user.lastName %></h1>
-      <div class="thumbnail">
-        <img src="<%= user.avatar %>" alt="user profile image">
-        <div class="caption"><a href="mailto:<%= user.email %>"><%= user.email %></a></div>
-      </div>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-      Veniam, fugiat repudiandae neque sed in unde dolore nulla 
-      consectetur tempora quis. Nisi eaque accusantium sint minima 
-      quas amet corporis perspiciatis nostrum?
+<div class="row">
+  <div class="col-md-4">
+    <h1><%= user.firstName + " " + user.lastName %></h1>
+    <div class="card">
+      <img class="card-img-top" src="<%= user.avatar %>" alt="user profile image">
+      <div class="card-body">Email: <a href="mailto:<%= user.email %>"><%= user.email %></a></div>
+      <p class="card-text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Veniam, fugiat repudiandae neque sed in unde dolore nulla 
+        consectetur tempora quis. Nisi eaque accusantium sint minima 
+        quas amet corporis perspiciatis nostrum?
+      </p>
     </div>
-    <div class="col-md-8">
-      <h3><%= user.username %>'s campgrounds</h3>
-      <ul>
-        <% campgrounds.forEach((campground) => {%>
-          <li>
-            <a href="/campgrounds/<%=campground.id%>"><%= campground.name %></a>
-          <% }) %>
-          </li>
-      </ul>
-    </div>
+  </div>
+  <div class="col-md-8">
+    <h3><%= user.username %>'s campgrounds</h3>
+    <ul>
+      <% campgrounds.forEach((campground) => {%>
+        <li>
+          <h5><a href="/campgrounds/<%=campground.id%>"><%= campground.name %></a></h5>
+        </li>
+      <% }) %>
+    </ul>
   </div>
 </div>
 
