--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>YelpCamp</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
     </head>
@@ -33,5 +35,5 @@
       <li></li>
       <li></li>
     </ul>
-
-<%- include("./partials/footer") %>
+    </body>
+</html>
