Like button added

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -40,7 +40,8 @@
                 <img class="card-img-top" src="<%= campground.image %>" alt="<%= campground.name %>">
                 <div class= "card-body">
                     <h5 class="card-title"><%= campground.name %></h5>
-                    <a href="/campgrounds/<%= campground._id%>" class ="btn btn-primary">More Info</a>
+                    <h5><span class="badge label-primary"><i class="fas fa-thumbs-up"></i> <%= campground.likes.length %></span></h5>
+                    <a href="/campgrounds/<%= campground._id%>" class ="btn btn-outline-primary">More Info</a>
                 </div>
             </div>
         </div>
