--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,15 +14,12 @@
 				<p>
 					<em>Submitted By <a href="/users/<%= campground.author.id %>"><%= campground.author.username %></a>, <%= moment(campground.createdAt).fromNow() %></em>
 				</p>
-
-
 				<div class="float-right">
 					<button type="button" class="btn btn-sm btn-primary" data-toggle="modal"
 									data-target="#campgroundLikes">
 							<span>Total likes: <i class="fas fa-thumbs-up"></i> <%= campground.likes.length %></span>
 					</button>
 				</div>
-				
 				<div style="padding-bottom: 10px;">
 					<form action="/campgrounds/<%= campground._id %>/like" method="POST">
 							<div class="btn-group">
@@ -43,8 +40,6 @@
 							</div>
 					</form>
 				</div>
-
-				
 
 				<!-- Campground Likes Modal -->
 				<div id="campgroundLikes" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -85,13 +80,12 @@
 					</div>
 				</div>
 
-
 				<hr>
 				<p class="card-text"><%= campground.description %></p>
 				<% if (currentUser && (campground.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
-					<a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+					<a class="btn btn-sm btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
 					<form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-						<button class="btn btn-xs btn-danger">Delete</button>
+						<button class="btn btn-sm btn-danger">Delete</button>
 					</form>
 				<% } %>                
 			</div>
