--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,12 +6,10 @@
 <% } %>
 <header class= "jumbotron">
     <div class= "container">
-        <h1>Welcome To YelpCamp!</h1>
-        <p>View our hand-picked campgrounds from all over the world!!!</p>
-        <p>
+        <h1 class="display-3">Welcome To YelpCamp!</h1>
+        <p class="lead">View our hand-picked campgrounds from all over the world!!!</p>
+        <p class="lead float-right">
             <a class= "btn btn-primary btn-lg" href="/campgrounds/new">Add new Campground</a>
-        </p>
-        <p>
             <form action="/campgrounds" method="GET" class="form-inline">
                 <div class="form-group">
                     <input type="text" name="search" placeholder="Campground search..." class="form-control">
