added hr before footer

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -41,8 +41,12 @@
             <div class= "card">
                 <img class="card-img-top" src="<%= campground.image %>" alt="<%= campground.name %>">
                 <div class= "card-body">
-                    <h5 class="card-title mb-0"><a style="color:#000000;" href="/campgrounds/<%= campground._id%>"><%= campground.name %></a></h5>
-                    <h5 class="mb-2"><span class="badge label-primary"><i class="fas fa-thumbs-up"></i> <%= campground.likes.length %></span></h5>
+                    <h5 class="card-title mb-1"><a style="color:#000000;" href="/campgrounds/<%= campground._id%>"><%= campground.name %></a></h5>
+                    <h5 class="mb-2">
+                        <span class="badge label-primary">
+                            <i class="fas fa-thumbs-up"></i> <%= campground.likes.length %>
+                        </span>
+                    </h5>
                     <a href="/campgrounds/<%= campground._id%>" class ="btn btn-outline-secondary">More Info</a>
                 </div>
             </div>
@@ -94,4 +98,5 @@
     </ul>
     <% } %>
 </nav>
+
 <%- include("../partials/footer") %>
