edit user profile added

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
 
 <div class="row justify-content-center">
   <div class="col-md-12 text-center">
-    <h1>Edit <%= campground.name %></h1>
+    <h1 class="font-weight-normal">Edit <%= campground.name %></h1>
 	</div>
   <div class="col-xs-8 col-sm-6 col-md-5 col-lg-4">
     <form action= "/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
