--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,7 @@
 <header class= "jumbotron">
     <div class= "container">
         <h1 class="display-3">Welcome To YelpCamp!</h1>
-        <p class="lead">View our hand-picked campgrounds from all over the world!!!</p>
+        <p class="lead">Search our hand-picked campgrounds from all over the world!!!</p>
         <p class="lead float-right">
             <a class= "btn btn-primary btn-lg" href="/campgrounds/new">Add new Campground</a>
             <form action="/campgrounds" method="GET" class="form-inline">
