--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,16 +1,12 @@
 <%- include("./partials/header") %>
 
 <div class="container">
-  <div class="col-md-4">
-    <form action="/forgot" method="POST">
-      <legend>Forgot Password</legend>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" name="email" autofocus class="form-control">
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Rest Password">
-        </div>
+  <div class="col-md-12">
+    <form class="form-signin" action="/forgot" method="POST">
+      <h1 class="h3 mb-3 font-weight-normal">Forgot Password</h1>
+        <label for="email" class="sr-only">Email</label>
+        <input type="email" id="email" name="email" class="form-control" placeholder="ex)abc@gmail.com" autofocus>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Reset Password</button>
     </form>
   </div>
 </div>
