--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,7 @@
         </form>
         <div class="form-signin">
             <a href="/campgrounds">Go Back</a>
+            <a class="float-right" href="/forgot">Reset Password</a>
         </div>
     </div>
 </div>
