--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,12 +1,9 @@
 <%- include("../partials/header") %>
 
-<div class="row">
-  <div class="col-md-4">
-    <% if (user.username === currentUser.username) {%>
-      <a href="/users/<%= user._id %>/edit">Edit</a>
-    <% } %>
+<div class="row justify-content-center">
+  <div class="col-md-4 text-center">
     <h1><%= user.firstName + " " + user.lastName %></h1>
-    <div class="card">
+    <div class="card mb-4">
       <img class="card-img-top" src="<%= user.avatar %>" alt="user profile image">
       <div class="card-body">Email: <a href="mailto:<%= user.email %>"><%= user.email %></a></div>
       <p class="card-text">
@@ -16,6 +13,16 @@
         quas amet corporis perspiciatis nostrum?
       </p>
     </div>
+    <div>
+      <% if (!user.followers.includes(currentUser.id) && user.username !== currentUser.username) { %>
+        <a href="/users/<%= user._id %>/follow"><button class="btn btn-primary">Follow <%= user.username %></button></a>
+      <% } else if (user.username !== currentUser.username) {%>
+        <a href="/users/<%= user._id %>/follow"><button class="btn btn-primary" disabled>Follow <%= user.username %></button></a>
+      <% } else {%>
+        <a href="/users/<%= user._id %>/edit"><button class="btn btn-primary">Edit Profile</button></a>
+      <% } %>
+    </div>
+    
   </div>
   <div class="col-md-8">
     <h3><%= user.username %>'s campgrounds</h3>
