--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -37,6 +37,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    font-family: 'Dosis', sans-serif;
   }
 .footer {
     position: absolute;
