--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,75 +1,78 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>YelpCamp</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-        <link rel="stylesheet" href="/stylesheets/main.css">
-    </head>
-    <body>
+  <head>
+    <title>YelpCamp</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/main.css">
+  </head>
+  <body>
     <nav class= "navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <div class="container">
         <a class="navbar-brand" href="/">YelpCamp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item <%= currentUser ? 'active' : '' %>">
-                    <a href="/campgrounds" class="nav-link">Home</a>
-                </li>
-                <% if(currentUser) { %>
-                    <li class="nav-item active">
-                        <a href="/users/<%= currentUser._id %>" class="nav-link">My Profile</a>
-                    </li>
-                <% } %>
-            </ul>
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item <%= currentUser ? 'active' : '' %>">
+                  <a href="/campgrounds" class="nav-link">Home</a>
+              </li>
+              <% if(currentUser) { %>
+                  <li class="nav-item active">
+                      <a href="/users/<%= currentUser._id %>" class="nav-link">My Profile</a>
+                  </li>
+              <% } %>
+          </ul>
             <ul class="navbar-nav">
-                <% if(!currentUser) { %>
-                    <li class="nav-item">
-                        <a href="/login" class="nav-link">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/register" class="nav-link">Sign Up</a>
-                    </li class="nav-item">
-                <% } else { %>
-                    <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdown" role="button"
-                        aria-haspopup="true" aria-expanded="false">Notifications <span class="badge">
-                            <%= notifications.length %></span>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/notifications">View past notifications</a>
-                            <% notifications.forEach(notification => { %>
-                                <a class="dropdown-item" href="/notifications/<%= notification.id %>">
-                                    <%= notification.username %> created a new campground
-                                </a>
-                            <% }); %>                            
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Signed In As <%= currentUser.username %></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/logout" class="nav-link">Logout</a>
-                    </li>
-                <% } %>
+              <% if(!currentUser) { %>
+                <li class="nav-item">
+                  <a href="/login" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a href="/register" class="nav-link">Sign Up</a>
+                </li class="nav-item">
+              <% } else { %>
+                <li class="nav-item dropdown">
+                  <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdown" role="button"
+                  aria-haspopup="true" aria-expanded="false">Notifications <span class="badge">
+                    <%= notifications.length %></span>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/notifications">View past notifications</a>
+                    <% notifications.forEach(notification => { %>
+                      <a class="dropdown-item" href="/notifications/<%= notification.id %>">
+                        <%= notification.username %> created a new campground
+                      </a>
+                    <% }); %>                            
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">Signed In As <%= currentUser.username %></a>
+                </li>
+                <li class="nav-item">
+                  <a href="/logout" class="nav-link">Logout</a>
+                </li>
+              <% } %>
             </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
 
-    <div class="container">
-        <% if(error && error.length > 0) { %>
-            <div class="alert alert-danger" role="alert">
-                <%= error %>
-            </div>
-        <% } %>
-        <% if(success && success.length > 0) { %>
-            <div class="alert alert-success" role="alert">
-                <%= success %>
-            </div>
-        <% } %>
-    </div>
-    <div class="container">
+  <div class="container">
+      <% if(error && error.length > 0) { %>
+          <div class="alert alert-danger" role="alert">
+              <%= error %>
+          </div>
+      <% } %>
+      <% if(success && success.length > 0) { %>
+          <div class="alert alert-success" role="alert">
+              <%= success %>
+          </div>
+      <% } %>
+  </div>
+  <div class="container">
   
